# AutoCalibration

./: .gitignore  astra_server.py  bead_detection.py  bead_detection_2.py  gauss_newton.py  gauss_newton_real.py  pareto.py  phantom_generator.py  phantom_projection.py  phantom_projector.py  phantom_reconstruction.py  pyproject.toml  run_distributed.sh  server.out  server.py  test.py  theta_hat.csv  theta_hat.txt  theta_hat_elipse_working.csv  theta_hat_scanned.csv
archive/: theta_hat.csv  theta_hat_diff.csv  theta_hat_scanned.csv
archive_code/: recon.py  watch_csv.sh
delta_log/: calibration_log_summary.csv  calibration_log_summary_2.csv  delta_hat_5_360.txt  delta_hat_Scan10_360.txt  delta_hat_Scan11_10.txt  delta_hat_Scan11_12.txt  delta_hat_Scan11_120.txt  delta_hat_Scan11_15.txt  delta_hat_Scan11_18.txt  delta_hat_Scan11_180.txt  delta_hat_Scan11_20.txt  delta_hat_Scan11_24.txt  delta_hat_Scan11_3.txt  delta_hat_Scan11_30.txt  delta_hat_Scan11_36.txt  delta_hat_Scan11_360.txt  delta_hat_Scan11_4.txt  delta_hat_Scan11_40.txt  delta_hat_Scan11_45.txt  delta_hat_Scan11_5.txt  delta_hat_Scan11_6.txt  delta_hat_Scan11_60.txt  delta_hat_Scan11_72.txt  delta_hat_Scan11_8.txt  delta_hat_Scan11_9.txt  delta_hat_Scan11_90.txt  delta_hat_Scan1_360.txt  delta_hat_Scan2_10.txt  delta_hat_Scan2_12.txt  delta_hat_Scan2_120.txt  delta_hat_Scan2_15.txt  delta_hat_Scan2_18.txt  delta_hat_Scan2_180.txt  delta_hat_Scan2_20.txt  delta_hat_Scan2_24.txt  delta_hat_Scan2_3.txt  delta_hat_Scan2_30.txt  delta_hat_Scan2_36.txt  delta_hat_Scan2_360.txt  delta_hat_Scan2_4.txt  (+58 more)
(+335 files in other folders)
