[project]
name = "auto-calibration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "astra-toolbox>=2.4.1",
    "jupyter>=1.1.1",
    "napari>=0.6.6",
    "numpy>=2.2.6",
    "opencv-python>=4.13.0.90",
    "pandas>=2.3.3",
    "paramiko>=4.0.0",
    "pyvista>=0.46.4",
    "vtk>=9.5.2",
]
